--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Created by https://www.toptal.com/developers/gitignore/api/gradle,intellij,macos,java
-# Edit at https://www.toptal.com/developers/gitignore?templates=gradle,intellij,macos,java
+# Created by https://www.toptal.com/developers/gitignore/api/macos,windows,intellij,gradle,java
+# Edit at https://www.toptal.com/developers/gitignore?templates=macos,windows,intellij,gradle,java
 
 ### Intellij ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
@@ -109,11 +109,7 @@ fabric.properties
 # CodeStream plugin
 # https://plugins.jetbrains.com/plugin/12206-codestream
 .idea/codestream.xml
-.idea
-gradlew.bat
-gradle
-settings.gradle
-gradlew
+
 # Azure Toolkit for IntelliJ plugin
 # https://plugins.jetbrains.com/plugin/8053-azure-toolkit-for-intellij
 .idea/**/azureSettings.xml
@@ -177,6 +173,32 @@ Temporary Items
 # iCloud generated files
 *.icloud
 
+### Windows ###
+# Windows thumbnail cache files
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
+
+# Dump file
+*.stackdump
+
+# Folder config file
+[Dd]esktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
+
 ### Gradle ###
 .gradle
 **/build/
@@ -184,9 +206,6 @@ Temporary Items
 
 # Ignore Gradle GUI config
 gradle-app.setting
-
-# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
-!gradle-wrapper.jar
 
 # Avoid ignore Gradle wrappper properties
 !gradle-wrapper.properties
@@ -203,11 +222,10 @@ gradle-app.setting
 ### Gradle Patch ###
 # Java heap dump
 *.hprof
-
-# End of https://www.toptal.com/developers/gitignore/api/gradle,intellij,macos,java
-/.gradle/
-
+.idea
+# End of https://www.toptal.com/developers/gitignore/api/macos,windows,intellij,gradle,java
 
 ### properties ###
 *.properties
 *.yml
+/logs
